<resources>
    <string name="app_name">未知しるべ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="bt_back">←</string>

    <!-- Title画面 -->
    <string name="bt_navigation">なりたい感情にナビゲート</string>
    <string name="bt_spotList">お気に入りスポット</string>

    <!-- NaviEmotionSelect画面 -->
    <string name="tv_emotion_select_desc">なりたい感情を教えてください</string>
    <string name="bt_happy">ハッピー</string>
    <string name="bt_calm">穏やか</string>
    <string name="bt_exciting">わくわく</string>
    <string name="bt_sad">しんみり</string>

    <!-- NaviEmoValueSelect画面 -->
    <string name="tv_emovalue_select_desc">選択した感情の大きさを\n教えてください</string>
    <string name="tv_emovalue_min">小</string>
    <string name="tv_emovalue_max">大</string>

    <!-- NaviTimeSelect画面 -->
    <string name="tv_time_select_desc">お出かけに使える時間を\n教えてください</string>
    <string name="bt_time_decision">決定</string>

    <!-- NaviDestination画面 -->
    <string name="tv_destination_desc">ここに行きましょう</string>
    <string name="tv_destination">提案地</string>
    <string name="bt_go">経路案内する</string>

    <!-- NaviNavigating画面 -->
    <string name="tv_navigating">案内中</string>

    <!-- NaviEvaluation画面 -->
    <string name="tv_destinarion_evaluation_desc">今回の旅はいかがでしたか</string>
    <string name="tv_good">気に入った</string>
    <string name="tv_bad">気に入らなかった</string>

    <!-- NaviDetour画面 -->
    <string name="tv_detour_desc">寄り道スポットに到着しました</string>
    <string name="tv_detourSpot">寄り道スポット名</string>
    <string name="tv_detourSpot_desc">寄り道スポット説明</string>
    <string name="bt_evaluation">評価する</string>

    <!-- NaviDetourEvaluation画面 -->
    <string name="tv_detour_evaluation_desc">寄り道スポットはいかがでしたか</string>

    <!-- SpotList画面 -->

    <!-- SpotRegister画面 -->
    <string name="tv_spot">場所名</string>
    <string name="tv_emotion">感情</string>
    <string name="tv_explanation">説明</string>

    <string-array name="sp_emotion">
        <item>ハッピー</item>
        <item>穏やか</item>
        <item>わくわく</item>
        <item>しんみり</item>
    </string-array>

    <!-- NotificationService -->
    <string name="channel_id">notification_channel</string>
    <string name="channel_name">未知しるべスポット到着通知</string>
    <string name="channel_description">未知しるべが提案したスポットに到着時に通知</string>
    <string name="mtg_notification_title_destination">目的地に到着しました</string>
    <string name="mtg_notification_text_destination">ここをタップして評価画面へ</string>
    <string name="mtg_notification_title_waypoint">寄り道スポットに到着しました</string>
    <string name="mtg_notification_text_waypoint">ここをタップしてスポット詳細画面へ</string>

</resources>