<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.example.michishirube.ui.NavigationSharedViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.naviEmotionSelect.NaviEmotionSelectFragment">

        <TextView
            android:id="@+id/tvCalm"
            android:text="@string/bt_calm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btCalm"
            app:layout_constraintStart_toStartOf="@+id/btCalm"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvExciting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_exciting"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/btExciting"
            app:layout_constraintStart_toStartOf="@+id/btExciting"
            app:layout_constraintTop_toBottomOf="@+id/btExciting" />

        <TextView
            android:id="@+id/tvEmotionSelectTitle"
            style="@style/HeadingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_emotion_select_desc"
            app:layout_constraintBottom_toTopOf="@+id/btHappy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvHappy"
            android:text="@string/bt_happy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btHappy"
            app:layout_constraintStart_toStartOf="@+id/btHappy"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btSad"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:background="@color/colorPrimaryDark"
            android:scaleType="fitCenter"
            android:src="@drawable/bt_ripple_sad"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btExciting"
            app:layout_constraintTop_toBottomOf="@+id/tvHappy" />

        <ImageButton
            android:id="@+id/btExciting"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:background="@color/colorPrimaryDark"
            android:scaleType="fitCenter"
            android:src="@drawable/bt_ripple_exciting"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btSad"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCalm" />

        <TextView
            android:id="@+id/tvSad"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/bt_sad"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/btSad"
            app:layout_constraintStart_toStartOf="@+id/btSad"
            app:layout_constraintTop_toBottomOf="@+id/btSad" />

        <ImageButton
            android:id="@+id/btHappy"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:scaleType="fitCenter"
            android:src="@drawable/bt_ripple_happy"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/tvCalm"
            app:layout_constraintEnd_toStartOf="@+id/btCalm"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/btCalm"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:background="@color/colorPrimaryDark"
            android:scaleType="fitCenter"
            android:src="@drawable/bt_ripple_calm"
            app:layout_constraintBottom_toTopOf="@+id/tvHappy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btHappy" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>