<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.michishirube.ui.NavigationSharedViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageButton
            android:id="@+id/btGood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/btBad"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bt_ripple_good" />

        <ImageButton
            android:id="@+id/btBad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btGood"
            app:srcCompat="@drawable/bt_ripple_bad" />

        <TextView
            android:id="@+id/tvGood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_good"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/btGood"
            app:layout_constraintStart_toStartOf="@+id/btGood"
            app:layout_constraintTop_toBottomOf="@+id/btGood" />

        <TextView
            android:id="@+id/tvBad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_bad"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/btBad"
            app:layout_constraintStart_toStartOf="@+id/btBad"
            app:layout_constraintTop_toBottomOf="@+id/btBad" />

        <TextView
            android:id="@+id/tvDesc"
            style="@style/HeadingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_detour_evaluation_desc"
            app:layout_constraintBottom_toTopOf="@+id/btGood"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>