<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.michishirube.ui.spotRegister.SpotRegisterViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".ui.spotRegister.SpotRegisterFragment">

        <TextView
            android:id="@+id/tvSpotName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/tv_spot"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toTopOf="@+id/etSpotName"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/ivSpot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:src="@drawable/img_frame"
            app:layout_constraintBottom_toTopOf="@+id/tvSpotName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etSpotName"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp"
            android:theme="@style/EditTextHint"
            app:layout_constraintBottom_toTopOf="@+id/tvFeel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvFeel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="24dp"
            android:text="@string/tv_emotion"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toTopOf="@+id/spFeel"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/spFeel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp"
            android:entries="@array/sp_emotion"
            android:spinnerMode="dropdown"
            android:textColor="@color/colorWhite"
            android:theme="@style/SpinnerStyle"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            app:layout_constraintBottom_toTopOf="@+id/tvExp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvExp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/tv_explanation"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toTopOf="@+id/etExp"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etExp"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:theme="@style/EditTextHint"
            app:layout_constraintBottom_toTopOf="@+id/ibDecision"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/ibDecision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/bt_decision" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>